--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- TRIAL 1 - <!DOCTYPE html>
 <html>
 
   <head>
@@ -11,6 +11,31 @@
 
   <body>
     <h1>Hello world.</h1>
+  </body>
+
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        .red {
+            background-color: #FF0000;
+            width: 350px;
+            height: 240px;
+        }
+    </style>
+  </head>
+
+  <body>
+    <div class="red"></div>
   </body>
 
 </html>
