--- a/template.html
+++ b/template.html
@@ -16,7 +16,7 @@
 </html> -->
 
 
-
+<!-- TRIAL 2
 <!DOCTYPE html>
 <html>
 
@@ -38,4 +38,48 @@
     <div class="red"></div>
   </body>
 
+</html> -->
+
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        #black {
+            background-color: black;
+        }
+
+        #red {
+            background-color: #FF0000;
+        }
+
+        #gold {
+            background-color: #FFD700;
+        }
+
+        .bar {
+            width: 500px;
+            height: 100px;
+        }
+
+    </style>
+  </head>
+
+  <body>
+    <div class="bar" id="black"></div>
+    <div class="bar" id="red"></div>
+    <div class="bar" id="gold"></div>
+  </body>
+
+
+
 </html>
+
+
+
+
+
