--- a/template.html
+++ b/template.html
@@ -40,7 +40,7 @@
 
 </html> -->
 
-<!DOCTYPE html>
+<!-- TRIAL 3 <!DOCTYPE html>
 <html>
 
   <head>
@@ -75,11 +75,34 @@
     <div class="bar" id="gold"></div>
   </body>
 
+</html> -->
 
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <style>
+        body {
+            margin: 0;
+        }
+        .box {
+            background-color: black;
+            width: 100px;
+            height: 100px;
+            display: inline-block;
+            margin-top: 50px;
+            margin-left: 50px;
+        }
+
+    </style>
+  </head>
+
+  <body>
+    <div class="box"></div>
+    <div class="box"></div>
+  </body>
 
 </html>
-
-
 
 
 
