--- a/template.html
+++ b/template.html
@@ -77,7 +77,7 @@
 
 </html> -->
 
-<!DOCTYPE html>
+<!-- TRIAL 4 <!DOCTYPE html>
 <html>
 
   <head>
@@ -100,6 +100,55 @@
   <body>
     <div class="box"></div>
     <div class="box"></div>
+  </body>
+
+</html> -->
+
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        #red {
+            background-color: red;
+        }
+
+        #blue {
+            background-color: blue;
+        }
+
+        .bar {
+            width: 350px;
+            height: 200px;
+        }
+
+
+        .box {
+            background-color: black;
+            width: 100px;
+            height: 100px;
+            display: inline-block;
+            margin-top: 50px;
+            margin-left: 50px;
+        }
+
+    </style>
+  </head>
+
+  <body>
+    <div class="bar" id="red">
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
+    <div class="bar" id="blue">
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
   </body>
 
 </html>
