--- a/template.html
+++ b/template.html
@@ -104,7 +104,7 @@
 
 </html> -->
 
-<!DOCTYPE html>
+<!-- TRIAL 5 <!DOCTYPE html>
 <html>
 
   <head>
@@ -151,7 +151,73 @@
     </div>
   </body>
 
-</html>
+</html> -->
+
+
+
+<!-- Trial 6<!DOCTYPE html>
+<html>
+
+  <head>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        #red {
+            background-color: red;
+        }
+
+        #blue {
+            background-color: blue;
+        }
+
+        .bar {
+            width: 350px;
+            height: 200px;
+            display: inline-block;
+        }
+
+        .box {
+            background-color: black;
+            width: 100px;
+            height: 100px;
+            display: inline-block;
+            margin-top: 50px;
+            margin-left: 50px;
+        }
+
+    </style>
+  </head>
+
+  <body>
+    <div class="bar" id="red">
+        <div class="box"></div>
+        <div class="box"></div>
+    </div><!--whitespace
+--><div class="bar" id="blue">
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+  </body>
+
+</html> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
