Trial 7/ Final Code

--- a/template.html
+++ b/template.html
@@ -194,8 +194,7 @@
     <div class="bar" id="red">
         <div class="box"></div>
         <div class="box"></div>
-    </div><!--whitespace
---><div class="bar" id="blue">
+    </div><div class="bar" id="blue">
         <div class="box"></div>
         <div class="box"></div>
     </div>
@@ -203,9 +202,70 @@
 
 </html> -->
 
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <style>
+
+        h1{
+            font-family: sans-serif;
+        }
+
+        #first .box {
+            width: 192px;
+
+        }
+
+        #second1 .box {
+            width: px;
+        }
+
+        #second2 .box {
+
+        }
+
+        #third .box {
+
+        }
+
+        .bar {
+            background-color: #555555;
+            width: 600px;
+            height: 130px;
+            margin-top: 10px;
+        }
+
+        .box {
+            background-color: #cccccc;
+            height: 118px;
+            display: inline-block;
+            margin: 6px;
+            margin-right: 0;
+        }
 
 
+    </style>
+  </head>
 
+  <body>
+    <h1>AAAAAHHHHHH</h1>
+     <div class="bar" id="first">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div><div class="bar" id="second">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div><div class="bar" id="third">
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+  </body>
+
+</html>
 
 
 
